# zettelkasten

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: lints.yml  release.yml  rust.yml
data/postgres/: Cargo.toml  sqlx-data.json
data/postgres/migrations/: 20221109105939_initial.down.sql  20221109105939_initial.up.sql
data/postgres/src/: lib.rs
data/sqlite/: Cargo.toml  sqlx-data.json
data/sqlite/migrations/: 20221008075452_initial.down.sql  20221008075452_initial.up.sql  20221029075004_remove_zettel_title.down.sql  20221029075004_remove_zettel_title.up.sql  20221105101718_drop_zettel_title.down.sql  20221105101718_drop_zettel_title.up.sql  20221105111819_zettel_path_ignore_case.down.sql  20221105111819_zettel_path_ignore_case.up.sql
data/sqlite/src/: lib.rs  regexp.rs
front/terminal/: Cargo.toml
front/terminal/src/: lib.rs  view.rs
front/terminal/src/view/: config.rs  list.rs  logged_in.rs  login.rs  not_logged_in.rs  register.rs  search.rs  utils.rs  zettel.rs
front/web/: Cargo.toml
front/web/src/: lib.rs  user.rs
front/web/src/req/: mod.rs
front/web/src/routes/: login.rs  mod.rs  register.rs  zettel.rs
front/web/src/routes/zettel/: filters.rs
front/web/static/: script.js  style.css
front/web/templates/: _layout.html  login.html  register.html  zettel.html
shared/: Cargo.toml
shared/src/: lib.rs  storage.rs
src/: main.rs
