[package]
name = "zettelkasten"
version = "0.0.0"
edition = "2021"

[features]
runtime-async-std = [
    "async-std",
    "zettelkasten-sqlite?/runtime-async-std",
    "zettelkasten-shared/runtime-async-std",
]

front-web = ["zettelkasten-web"]
front-terminal = ["zettelkasten-terminal"]

data-sqlite = ["zettelkasten-sqlite"]

[dependencies]
zettelkasten-web = { path = "front/web", optional = true }
zettelkasten-terminal = { path = "front/terminal", optional = true }
zettelkasten-sqlite = { path = "data/sqlite", optional = true }
zettelkasten-shared = { path = "shared" }
dotenv = { version = "0.15.0", default-features = false }

# Thiserror >=1.0.35 has issues with rust-analyzer, messing with people's editor settings
# For more info see https://github.com/dtolnay/thiserror/issues/192#issuecomment-1279991075
thiserror = "=1.0.37"

[dependencies.async-std]
version = "1.12.0"
default-features = false
features = ["attributes"]
optional = true

[workspace]
members = ["front/web", "front/terminal", "data/sqlite", "shared"]
