[package]
name = "zettelkasten"
version = "0.1.0"
edition = "2021"

[features]
runtime-async-std = [
    "zettelkasten-sqlite?/runtime-async-std",
    "zettelkasten-shared/runtime-async-std",
]

front-web = ["zettelkasten-web"]
front-terminal = ["zettelkasten-terminal"]

data-sqlite = ["zettelkasten-sqlite"]

[dependencies]
zettelkasten-web = { path = "front/web", optional = true }
zettelkasten-terminal = { path = "front/terminal", optional = true }
zettelkasten-sqlite = { path = "data/sqlite", optional = true }
zettelkasten-shared = { path = "shared" }
dotenv = { version = "0.15.0", default-features = false }

[workspace]
members = ["front/web", "front/terminal", "data/sqlite", "shared"]
