[package]
name = "zettelkasten-shared"
version = "0.1.1"
edition = "2021"

[features]
runtime-async-std = ["sqlx/runtime-async-std-rustls", "dep:async-std"]

[dependencies]
async-std = { version = "1.0", optional = true, default-features = false, features = [
    "attributes",
] }
async-trait = { version = "0.1.67", default-features = false }
bcrypt = { version = "0.14.0", default-features = false, features = ["std"] }
custom_debug = { version = "0.5.1", default-features = false }
futures = { version = "0.3.27", default-features = false, features = ["alloc"] }
serde = { version = "1.0.157", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.94", default-features = false }
snafu = { version = "0.7.4", features = ["std"], default-features = false }
regex = { version = "1.8.1", default-features = false }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = ["macros", "migrate"]
