[package]
name = "zettelkasten-postgres"
version = "0.1.1"
edition = "2021"

[features]
runtime-async-std = [
    "sqlx/runtime-async-std-rustls",
    "zettelkasten-shared/runtime-async-std",
]

[dependencies]
async-lock = { version = "2.7.0", default-features = false }
bcrypt = { version = "0.14.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.97", default-features = false }
snafu = { version = "0.7.4", default-features = false }
zettelkasten-shared = { version = "0.1.1", path = "../../shared" }

[dependencies.regex]
version = "1.7.1"
default-features = false
features = ["perf", "std"]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = ["postgres", "migrate", "macros", "json", "chrono", 'offline']
