[package]
name = "zettelkasten-terminal"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
snafu = { version = "0.7.2", features = ["std"], default-features = false }
tui = { version = "0.19.0", default-features = false, features = ["crossterm"] }
zettelkasten-shared = { version = "0.0.0", path = "../../shared" }

[dependencies.regex]
version = "1.6.0"
default-features = false
features = ["perf", "std"]
