[package]
name = "zettelkasten-web"
version = "0.1.1"
edition = "2021"

[features]
runtime-async-std = ["zettelkasten-shared/runtime-async-std"]

[dependencies]
zettelkasten-shared = { version = "0.1.1", path = "../../shared" }
snafu = { version = "0.7.3", default-features = false }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
askama = { version = "0.11.1", default-features = false }
markdown = { version = "1.0.0-alpha.3", default-features = false }

[dependencies.tide]
version = "0.16.0"
default-features = false
features = ["h1-server", "sessions"]
